add typo and composant pages

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>Grille</title>
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
+
     <div class="row">
+      <a href="http://foundation.zurb.com/sites/docs/grid.html">Foundation</a>
       <div class="small-12 columns">
         <h1 class="show-for-small-only">Small</h1>
         <h1 class="show-for-medium-only">Medium</h1>
@@ -29,21 +31,6 @@
     <hr />
 
     <div class="row">
-      <div class="small-12 medium-6 columns">
-        <div class="primary callout">
-          <p>.small-12 .medium-6</p>
-        </div>
-      </div>
-      <div class="small-12 medium-6 columns">
-        <div class="primary callout">
-          <p>.small-12 .medium-6</p>
-        </div>
-      </div>
-    </div>
-
-    <hr />
-
-    <div class="row">
       <div class="small-4 columns">
         <div class="primary callout">
           <p>.small-4</p>
@@ -64,6 +51,37 @@
     <hr />
 
     <div class="row">
+      <div class="small-12 medium-6 columns">
+        <div class="primary callout">
+          <p>.small-12 .medium-6</p>
+        </div>
+      </div>
+      <div class="small-12 medium-6 columns">
+        <div class="primary callout">
+          <p>.small-12 .medium-6</p>
+        </div>
+      </div>
+    </div>
+
+    <hr />
+
+    <div class="row">
+      <div class="small-4 columns">
+        <div class="primary callout">
+          <p>.small-4</p>
+        </div>
+      </div>
+      <div class=" small-offset-2 small-6 columns">
+        <div class="primary callout">
+          <p>.small-offset-2 .small-6</p>
+        </div>
+      </div>
+    </div>
+
+
+    <hr />
+
+    <div class="row">
       <div class="small-4 large-12 columns">
         <div class="primary callout">
           <p>.small-4 .large-12</p>
@@ -80,6 +98,96 @@
         </div>
       </div>
     </div>
+
+    <hr />
+    <hr />
+    <div class="row">
+      <h2>Grille dans grille</h2>
+    </div>
+
+
+    <div class="row">
+      <div class="small-12 columns">
+        <div class="primary callout">
+          .small-12
+          <div class="row">
+            <div class="small-8 columns">
+              <div class="primary callout">
+                <p>.small-8</p>
+              </div>
+            </div>
+            <div class="small-4 columns">
+              <div class="primary callout">
+                <p>.small-4</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="small-6 columns">
+        <div class="primary callout">
+          .small-6
+          <div class="row">
+            <div class="small-8 columns">
+              <div class="primary callout">
+                <p>.small-8</p>
+              </div>
+            </div>
+            <div class="small-4 columns">
+              <div class="primary callout">
+                <p>.small-4</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="small-6 columns">
+        <div class="primary callout">
+          .small-6
+          <div class="row">
+            <div class="small-8 columns">
+              <div class="primary callout">
+                <p>.small-8</p>
+              </div>
+            </div>
+            <div class="small-4 columns">
+              <div class="primary callout">
+                <p>.small-4</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="small-9 columns">
+        <div class="primary callout">
+          .small-9
+          <div class="row">
+            <div class="small-offset-3 small-7 columns">
+              <div class="primary callout">
+                <p>.small-offset-3 .small-7</p>
+              </div>
+            </div>
+            <div class="small-2 columns">
+              <div class="primary callout">
+                <p>.small-2</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="small-3 columns">
+        <div class="primary callout">
+          <p>.small-3</p>
+        </div>
+      </div>
+    </div>
+
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/what-input/what-input.js"></script>
