add 12 * small-1 example

--- a/index.html
+++ b/index.html
@@ -21,6 +21,71 @@
     <hr />
 
     <div class="row">
+      <div class="small-1 columns">
+        <div class="primary callout">
+          <p>.small-1</p>
+        </div>
+      </div>
+      <div class="small-1 columns">
+        <div class="primary callout">
+          <p>.small-1</p>
+        </div>
+      </div>
+      <div class="small-1 columns">
+        <div class="primary callout">
+          <p>.small-1</p>
+        </div>
+      </div>
+      <div class="small-1 columns">
+        <div class="primary callout">
+          <p>.small-1</p>
+        </div>
+      </div>
+      <div class="small-1 columns">
+        <div class="primary callout">
+          <p>.small-1</p>
+        </div>
+      </div>
+      <div class="small-1 columns">
+        <div class="primary callout">
+          <p>.small-1</p>
+        </div>
+      </div>
+      <div class="small-1 columns">
+        <div class="primary callout">
+          <p>.small-1</p>
+        </div>
+      </div>
+      <div class="small-1 columns">
+        <div class="primary callout">
+          <p>.small-1</p>
+        </div>
+      </div>
+      <div class="small-1 columns">
+        <div class="primary callout">
+          <p>.small-1</p>
+        </div>
+      </div>
+      <div class="small-1 columns">
+        <div class="primary callout">
+          <p>.small-1</p>
+        </div>
+      </div>
+      <div class="small-1 columns">
+        <div class="primary callout">
+          <p>.small-1</p>
+        </div>
+      </div>
+      <div class="small-1 columns">
+        <div class="primary callout">
+          <p>.small-1</p>
+        </div>
+      </div>
+    </div>
+
+    <hr />
+
+    <div class="row">
       <div class="small-12 columns">
         <div class="primary callout">
           <p>.small-12</p>
