example of simple page

--- a/index.html
+++ b/index.html
@@ -253,6 +253,37 @@
       </div>
     </div>
 
+    <hr />
+
+    <div>
+      <div class="row">
+        <div class="small-12 columns">
+          <img style="width: 100%" src="http://placehold.it/650x367" />
+        </div>
+      </div>
+      <br />
+      <div class="row">
+        <div class="hide-for-small-only medium-4 columns">
+          <img style="width: 100%" src="http://placehold.it/350x150" />
+        </div>
+        <div class="small-12 medium-8 columns">
+          <h1>Titre</h1>
+          <div class="row">
+            <div class="small-6 columns">
+              <a style="width: 100%" class=" warning button" href="#">Warning Color</a>
+            </div>
+            <div class="small-6 column">
+              <a  style="width: 100%" class="secondary button" href="#">Secondary Color</a>
+            </div>
+          </div>
+          <a class="warning button" href="#">Warning Color</a>
+          <a class="secondary button" href="#">Secondary Color</a>
+          <p>Nous le savons tous, la plus grande bataille qu'ait jamais eu à livrer Spider-Man est intérieure : il est écartelé entre les obligations quotidiennes de Peter Parker et les immenses responsabilités de Spider-Man. Mais dans THE AMAZING SPIDER-MAN : Le destin d'un Héros, Peter Parker va devoir mener une guerre plus dévastatrice que jamais... Pour Peter Parker, c'est vraiment génial d'être Spider-Man (Andrew Garfield). Rien de tel que de se balancer d'un gratte-ciel à l'autre, de savourer le fait d'être un héros, et de passer du temps avec Gwen (Emma Stone). Mais il y a un prix à payer pour être Spider-Man : il est le seul à pouvoir protéger les New-Yorkais des terribles menaces qui pèsent sur la ville. Spider-Man va vite découvrir en Electro (Jamie Foxx) un adversaire bien plus puissant...
+          </p>
+        </div>
+      </div>
+    </div>
+
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/what-input/what-input.js"></script>
