--- a/index.html
+++ b/index.html
@@ -9,106 +9,82 @@
   </head>
   <body>
 
-    <div class="row">
-      <a href="http://foundation.zurb.com/sites/docs/grid.html">Foundation</a>
-      <div class="small-12 columns">
-        <h1 class="show-for-small-only">Small</h1>
-        <h1 class="show-for-medium-only">Medium</h1>
-        <h1 class="show-for-large-only">Large</h1>
+    <div class="row" >
+      <div class="xsmall-12 columns" style="position: fixed;z-index: 2;background: white;top: 0; color: red">
+        <h1 class="show-for-xsmall-only">X-Small [0 - 319]</h1>
+        <h1 class="show-for-small-only">Small [320 - 479]</h1>
+        <h1 class="show-for-medium-only">Medium [480 - 779]</h1>
+        <h1 class="show-for-large-only">Large [780 - 1023]</h1>
+        <h1 class="show-for-xlarge-only">X-Large [1024 - 1279]</h1>
+        <h1 class="show-for-xxlarge-only">XX-Large [1280 - 1440]</h1>
       </div>
     </div>
 
+    <br />
+    <br />
+    <br />
+    <br />
     <hr />
 
     <div class="row">
-      <div class="small-1 columns">
+      <div class="xsmall-1 columns">
         <div class="primary callout">
-          <p>.small-1</p>
+          <p>.xsmall-1</p>
         </div>
       </div>
-      <div class="small-1 columns">
+      <div class="xsmall-1 columns">
         <div class="primary callout">
-          <p>.small-1</p>
+          <p>.xsmall-1</p>
         </div>
       </div>
-      <div class="small-1 columns">
+      <div class="xsmall-1 columns">
         <div class="primary callout">
-          <p>.small-1</p>
+          <p>.xsmall-1</p>
         </div>
       </div>
-      <div class="small-1 columns">
+      <div class="xsmall-1 columns">
         <div class="primary callout">
-          <p>.small-1</p>
+          <p>.xsmall-1</p>
         </div>
       </div>
-      <div class="small-1 columns">
+      <div class="xsmall-1 columns">
         <div class="primary callout">
-          <p>.small-1</p>
+          <p>.xsmall-1</p>
         </div>
       </div>
-      <div class="small-1 columns">
+      <div class="xsmall-1 columns">
         <div class="primary callout">
-          <p>.small-1</p>
+          <p>.xsmall-1</p>
         </div>
       </div>
-      <div class="small-1 columns">
+      <div class="xsmall-1 columns">
         <div class="primary callout">
-          <p>.small-1</p>
+          <p>.xsmall-1</p>
         </div>
       </div>
-      <div class="small-1 columns">
+      <div class="xsmall-1 columns">
         <div class="primary callout">
-          <p>.small-1</p>
+          <p>.xsmall-1</p>
         </div>
       </div>
-      <div class="small-1 columns">
+      <div class="xsmall-1 columns">
         <div class="primary callout">
-          <p>.small-1</p>
+          <p>.xsmall-1</p>
         </div>
       </div>
-      <div class="small-1 columns">
+      <div class="xsmall-1 columns">
         <div class="primary callout">
-          <p>.small-1</p>
+          <p>.xsmall-1</p>
         </div>
       </div>
-      <div class="small-1 columns">
+      <div class="xsmall-1 columns">
         <div class="primary callout">
-          <p>.small-1</p>
+          <p>.xsmall-1</p>
         </div>
       </div>
-      <div class="small-1 columns">
+      <div class="xsmall-1 columns">
         <div class="primary callout">
-          <p>.small-1</p>
-        </div>
-      </div>
-    </div>
-
-    <hr />
-
-    <div class="row">
-      <div class="small-12 columns">
-        <div class="primary callout">
-          <p>.small-12</p>
-        </div>
-      </div>
-    </div>
-
-    <hr />
-
-    <div class="row">
-      <div class="small-4 columns">
-        <div class="primary callout">
-          <p>.small-4</p>
-        </div>
-      </div>
-      <div class="small-4 columns">
-        <div class="primary callout">
-          <p>.small-4</p>
-        </div>
-      </div>
-      <div class="small-4 columns">
-        <div class="primary callout">
-          <p>.small-4</p>
+          <p>.xsmall-1</p>
         </div>
       </div>
     </div>
@@ -116,14 +92,9 @@
     <hr />
 
     <div class="row">
-      <div class="small-12 medium-6 columns">
+      <div class="xsmall-12 columns">
         <div class="primary callout">
-          <p>.small-12 .medium-6</p>
-        </div>
-      </div>
-      <div class="small-12 medium-6 columns">
-        <div class="primary callout">
-          <p>.small-12 .medium-6</p>
+          <p>.xsmall-12</p>
         </div>
       </div>
     </div>
@@ -131,14 +102,49 @@
     <hr />
 
     <div class="row">
-      <div class="small-4 columns">
+      <div class="xsmall-4 columns">
         <div class="primary callout">
-          <p>.small-4</p>
+          <p>.xsmall-4</p>
         </div>
       </div>
-      <div class=" small-offset-2 small-6 columns">
+      <div class="xsmall-4 columns">
         <div class="primary callout">
-          <p>.small-offset-2 .small-6</p>
+          <p>.xsmall-4</p>
+        </div>
+      </div>
+      <div class="xsmall-4 columns">
+        <div class="primary callout">
+          <p>.xsmall-4</p>
+        </div>
+      </div>
+    </div>
+
+    <hr />
+
+    <div class="row">
+      <div class="xsmall-12 medium-6 columns">
+        <div class="primary callout">
+          <p>.xsmall-12 .medium-6</p>
+        </div>
+      </div>
+      <div class="xsmall-12 medium-6 columns">
+        <div class="primary callout">
+          <p>.xsmall-12 .medium-6</p>
+        </div>
+      </div>
+    </div>
+
+    <hr />
+
+    <div class="row">
+      <div class="xsmall-4 columns">
+        <div class="primary callout">
+          <p>.xsmall-4</p>
+        </div>
+      </div>
+      <div class=" xsmall-offset-2 xsmall-6 columns">
+        <div class="primary callout">
+          <p>.xsmall-offset-2 .xsmall-6</p>
         </div>
       </div>
     </div>
@@ -147,19 +153,19 @@
     <hr />
 
     <div class="row">
-      <div class="small-4 large-12 columns">
+      <div class="xsmall-4 large-12 columns">
         <div class="primary callout">
-          <p>.small-4 .large-12</p>
+          <p>.xsmall-4 .large-12</p>
         </div>
       </div>
-      <div class="small-4 large-12 columns">
+      <div class="xsmall-4 large-12 columns">
         <div class="primary callout">
-          <p>.small-4 .large-12</p>
+          <p>.xsmall-4 .large-12</p>
         </div>
       </div>
-      <div class="small-4 large-12 columns">
+      <div class="xsmall-4 large-12 columns">
         <div class="primary callout">
-          <p>.small-4 .large-12</p>
+          <p>.xsmall-4 .large-12</p>
         </div>
       </div>
     </div>
@@ -172,18 +178,18 @@
 
 
     <div class="row">
-      <div class="small-12 columns">
+      <div class="xsmall-12 columns">
         <div class="primary callout">
-          .small-12
+          .xsmall-12
           <div class="row">
-            <div class="small-8 columns">
+            <div class="xsmall-8 columns">
               <div class="primary callout">
-                <p>.small-8</p>
+                <p>.xsmall-8</p>
               </div>
             </div>
-            <div class="small-4 columns">
+            <div class="xsmall-4 columns">
               <div class="primary callout">
-                <p>.small-4</p>
+                <p>.xsmall-4</p>
               </div>
             </div>
           </div>
@@ -192,35 +198,35 @@
     </div>
 
     <div class="row">
-      <div class="small-6 columns">
+      <div class="xsmall-6 columns">
         <div class="primary callout">
-          .small-6
+          .xsmall-6
           <div class="row">
-            <div class="small-8 columns">
+            <div class="xsmall-8 columns">
               <div class="primary callout">
-                <p>.small-8</p>
+                <p>.xsmall-8</p>
               </div>
             </div>
-            <div class="small-4 columns">
+            <div class="xsmall-4 columns">
               <div class="primary callout">
-                <p>.small-4</p>
+                <p>.xsmall-4</p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="small-6 columns">
+      <div class="xsmall-6 columns">
         <div class="primary callout">
-          .small-6
+          .xsmall-6
           <div class="row">
-            <div class="small-8 columns">
+            <div class="xsmall-8 columns">
               <div class="primary callout">
-                <p>.small-8</p>
+                <p>.xsmall-8</p>
               </div>
             </div>
-            <div class="small-4 columns">
+            <div class="xsmall-4 columns">
               <div class="primary callout">
-                <p>.small-4</p>
+                <p>.xsmall-4</p>
               </div>
             </div>
           </div>
@@ -229,26 +235,26 @@
     </div>
 
     <div class="row">
-      <div class="small-9 columns">
+      <div class="xsmall-9 columns">
         <div class="primary callout">
-          .small-9
+          .xsmall-9
           <div class="row">
-            <div class="small-offset-3 small-7 columns">
+            <div class="xsmall-offset-3 xsmall-7 columns">
               <div class="primary callout">
-                <p>.small-offset-3 .small-7</p>
+                <p>.xsmall-offset-3 .xsmall-7</p>
               </div>
             </div>
-            <div class="small-2 columns">
+            <div class="xsmall-2 columns">
               <div class="primary callout">
-                <p>.small-2</p>
+                <p>.xsmall-2</p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="small-3 columns">
+      <div class="xsmall-3 columns">
         <div class="primary callout">
-          <p>.small-3</p>
+          <p>.xsmall-3</p>
         </div>
       </div>
     </div>
@@ -257,22 +263,22 @@
 
     <div>
       <div class="row">
-        <div class="small-12 columns">
+        <div class="xsmall-12 columns">
           <img style="width: 100%" src="http://placehold.it/650x367" />
         </div>
       </div>
       <br />
       <div class="row">
-        <div class="hide-for-small-only medium-4 columns">
+        <div class="hide-for-xsmall-only medium-4 columns">
           <img style="width: 100%" src="http://placehold.it/350x150" />
         </div>
-        <div class="small-12 medium-8 columns">
+        <div class="xsmall-12 medium-8 columns">
           <h1>Titre</h1>
           <div class="row">
-            <div class="small-6 columns">
+            <div class="xsmall-6 columns">
               <a style="width: 100%" class=" warning button" href="#">Warning Color</a>
             </div>
-            <div class="small-6 column">
+            <div class="xsmall-6 column">
               <a  style="width: 100%" class="secondary button" href="#">Secondary Color</a>
             </div>
           </div>
